experiments/grafana-gryml/gryml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "" #{chart.name}
  labels: {} #[merge]{chart.labels}
  annotations: {} #[merge]{chart.annotations}
  namespace: "" #{grafana.namespace}
spec:
  replicas: 1 #{replicas}
  selector:
    matchLabels:
      app: #{chart.name}
      release: #{chart.release}
  strategy: {} #{deploymentStrategy}
  template:
    metadata:
      labels: #[merge]{podLabels}
        app: #{grafana.name}
        release: #{chart.release}
      annotations: #[merge]{podAnnotations}

        # TODO: this should be probably calculated with the resulting config somehow instead of "source"
        checksum/config: = #{"gryml/configmap.yaml"|source|sha256}
        checksum/dashboards-json-config: = #{"gryml/dashboards-json-configmap.yaml"|source|sha256}
        checksum/sc-dashboard-provider-config: = #{"gryml/configmap-dashboard-provider.yaml"|source|sha256}
        checksum/secret: = #[if not admin.existingSecret]{"gryml/secret.yaml"|source|sha256}

    spec: [] #{parts.podSpec}
