experiments/grafana-gryml/gryml/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "" #{chart.name}
  labels: {} #[merge]{chart.labels}
  annotations: {} #[merge]{chart.annotations}
  namespace: [] #{chart.namespace}
spec:
  clusterIP: None
  selector:
    app: #{grafana.name}
    release: #{chart-release}
  type: ClusterIP
