experiments/grafana-gryml/gryml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "" #{chart.name}
  labels: {} #[append]{chart.labels}[append]{ingress.labels}
  annotations: {} #[append]{chart.annotations}
  namespace: "" #{grafana.namespace}
spec:
  tls: [] #[if]{ingress.tls}
  rules:
    - host: "" #{$host}
      http:
        paths: #[append]{ingress.extraPaths}
          - path: "" #{ingress.path}
            backend:
              serviceName: "" #{grafana.name}
              servicePort: "" #{service.port}
